# legacy

./: .gitlab-ci.yml  .gitmodules  .rustfmt.toml  Cargo.toml  README.md
client/: Cargo.toml
client/src/: callbacks.rs  error.rs  lib.rs  music.rs  net.rs  player.rs  tick.rs  world.rs
common/: Cargo.toml
common/src/: clock.rs  jobs.rs  lib.rs  manager.rs  msg.rs  names.rs  post.rs  session.rs  tub.rs
common/src/audio/: audio_gen.rs  audio_mgr.rs  mod.rs
common/src/ecs/: character.rs  mod.rs  net.rs  phys.rs
common/src/item/: mod.rs
common/src/net/: connection.rs  message.rs  mod.rs  packet.rs  protocol.rs  tcp.rs  tests.rs  udp.rs  udpmgr.rs
common/src/physics/: collision.rs  mod.rs  movement.rs  physics.rs  tests.rs
common/src/terrain/: chunk_mgr.rs  container.rs  entity.rs  mod.rs  vol_gen.rs  vol_mgr.rs  vol_pers.rs
common/src/terrain/chunk/: block.rs  chunk.rs  chunk_container.rs  chunk_conv.rs  chunk_file.rs  chunk_rle.rs  cluster.rs  container.rs  conv.rs  hetero.rs  homo.rs  mod.rs  rle.rs  sample.rs  tests.rs
common/src/terrain/figure/: cell.rs  figure.rs
common/src/terrain/terrain/: mod.rs  tests.rs
common/src/terrain/terrainn/: block.rs  mod.rs
common/src/util/: clock.rs  manager.rs  mod.rs  msg.rs  names.rs  post.rs  testutils.rs
common/src/vfs/: mod.rs  physicalDirectory.rs  physicalFile.rs  virtualDirectory.rs
common/tests/: chunk.rs  chunk_conv.rs  net.rs
headless/: Cargo.toml
headless/src/: main.rs
login-cli/: Cargo.toml
login-cli/src/: main.rs
misc/setup/: README.md  pre-commit
net/: Cargo.toml
net/src/: lib.rs
region/: Cargo.toml
region/src/: block.rs  cell.rs  chunk.rs  chunk_conv.rs  chunk_file.rs  chunk_rle.rs  collide.rs  collision.rs  container.rs  entity.rs  figure.rs  item.rs  lib.rs  model.rs  physics.rs  tests.rs  vol_gen.rs  vol_mgr.rs  vol_per.rs  vol_pers.rs
region/src/chunk/: block.rs  chunk.rs  chunk_container.rs  chunk_conv.rs  chunk_file.rs  chunk_rle.rs  mod.rs
region/src/ecs/: character.rs  mod.rs  net.rs  phys.rs  tests.rs
region/src/figure/: cell.rs  figure.rs  mod.rs
region/src/terrain/: chunk_mgr.rs  mod.rs  raw_chunk.rs  tests.rs
region/tests/: chunk_conv.rs
server/: Cargo.toml
server-cli/: Cargo.toml  build.rs
server-cli/src/: main.rs
server/src/: api.rs  config.rs  error.rs  init.rs  lib.rs  msg.rs  net.rs  player.rs  server.rs  server_context.rs  session.rs  tick.rs
server/src/network/: event.rs  handlers.rs  init.rs  mod.rs
voxygen/: Cargo.toml  build.rs
voxygen/data/vox/: 3.vox  5.vox
voxygen/saves/: .gitignore
voxygen/shaders/: frag.glsl  vert.glsl
voxygen/shaders/skybox/: frag.glsl  skybox.frag  vert.glsl
voxygen/shaders/tonemapper/: frag.glsl  tonemapper.frag  tonemapper.vert
voxygen/shaders/util/: bsdf.glsl  common.glsl  luts.glsl  noise.glsl  sky.glsl
voxygen/shaders/voxel/: frag.glsl  vert.glsl  voxel.frag  voxel.vert  water.frag  water.vert
voxygen/src/: build.rs  camera.rs  consts.rs  game.rs  hud.rs  key_state.rs  keybinds.rs  main.rs  mesh.rs  model_object.rs  pipeline.rs  render_volume.rs  renderer.rs  shader.rs  tests.rs  ui.rs  window.rs
voxygen/src/audio/: frontend.rs  mod.rs  ogg.rs  openal.rs
voxygen/src/new_ui/: mod.rs  render.rs  rescache.rs  span.rs  tests.rs  winbox.rs
voxygen/src/new_ui/element/: button.rs  hbox.rs  label.rs  mod.rs  rect.rs  textbox.rs  vbox.rs  winbox.rs
voxygen/src/new_ui/elements/: mod.rs  rect.rs  winbox.rs
voxygen/src/new_ui/primitive/: mod.rs
voxygen/src/skybox/: mesh.rs  mod.rs  model.rs
voxygen/src/tonemapper/: mod.rs
voxygen/src/ui/: convert_events.rs  mod.rs  render.rs  rescache.rs  span.rs  tests.rs  ui_components.rs  ui_internal.rs
voxygen/src/ui/element/: button.rs  hbox.rs  label.rs  mod.rs  rect.rs  textbox.rs  vbox.rs  winbox.rs
voxygen/src/ui/primitive/: mod.rs
voxygen/src/voxel/: material.rs  mesh.rs  mod.rs  model.rs  pipeline.rs  render_volume.rs  vox.rs
voxygen/tests/: validate_vox_files.rs
world/: Cargo.toml
world/src/: biomegen.rs  blockgen.rs  cachegen.rs  gen.rs  lib.rs  map.rs  overworld.rs  overworldgen.rs  topology.rs  towngen.rs  tree.rs  treegen.rs
world/src/util/: mod.rs  structure.rs
