[package]
name = "client"
version = "0.1.0"
edition = "2018"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>", "Terah <terah.dev@gmail.com>"]

[dependencies]
common = { path = "../common" }
world = { path = "../world" }
vek = "0.9.5"
log = "0.4"
parking_lot = { version = "0.6.4", features = ["nightly"] }
