[package]
name = "common"
version = "0.1.0"
edition = "2018"
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>", "Terah <terah.dev@gmail.com>"]

[dependencies]
enum-map = "0.2.31"
time = "0.1.40"
log = "0.4"
num = "0.2.0"
bincode = "1.0.0"
serde = "1.0.63"
serde_derive = "1.0.63"
get_if_addrs = "0.5.2"
byteorder = "1.2.3"
rand = "0.5.0"
lazy_static = "1.0.1"
threadpool = "1.7.1"
specs = { version = "0.12", features = ["nightly", "serde"] }
parking_lot = { version = "0.6.4", features = ["nightly"] }
vek = { version = "0.9.5", features = ["serde"] }
dot_vox = "1.0.1"
