[package]
name = "headless"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]

[dependencies]
client = { path = "../client" }
common = { path = "../common" }
get_if_addrs = "0.5.2"
syrup = "0.1"
vek = "0.9.5"
log = "0.4.1"
pretty_env_logger = "0.2.3"
parking_lot = { version = "0.6.4", features = ["nightly"] }
