[package]
name = "region"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]

[profile.dev]

[profile.release]
debug = true

[dependencies]
common = { path = "../common" }
enum-map = "0.2.31"
log = "0.4"
rand = "0.5.0"
noise = "0.5.1"
nalgebra = "0.15.1"
coord = "0.11.0"
threadpool = "1.7.1"
lazy_static = "1.0.1"
parking_lot = {version = "0.6", features = ["nightly"]}