[package]
name = "region"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]

[dependencies]
common = { path = "../common" }
enum-map = "0.2.31"
log = "0.4"
rand = "0.5.0"
noise = "0.5.1"
nalgebra = "0.15.1"
vek = "0.9.4"
threadpool = "1.7.1"
lazy_static = "1.0.1"
specs = { version = "0.12.2", features = ["nightly"] }
