[package]
name = "server-cli"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>", "Terah <terah.dev@gmail.com>"]

[profile.dev]

[profile.release]
debug = true

[dependencies]
common = { path = "../common" }
server = { path = "../server" }
log = "0.4.1"
pretty_env_logger = "0.2.3"
