[package]
name = "server"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>", "Terah <terah.dev@gmail.com>"]

[profile.dev]

[profile.release]
debug = true

[dependencies]
common = { path = "../common" }
world = { path = "../world" }
region = { path = "../region" }
coord = "0.11.0"
log = "0.4"
pretty_env_logger = "0.2.3"
time = "0.1.40"

# Dispatcher system
bifrost = { git = "https://github.com/zesterer/bifrost" }

# TOML Config files
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
